include(${Catch2_SOURCE_DIR}/extras/Catch.cmake)

# Example:
#
# add_executable(vector_tests vector_tests.cpp)
# target_link_libraries(vector_tests
#   PRIVATE
#     tuna::tuna_warnings
#     tuna::tuna_options
#     tuna::tuna
#     Catch2::Catch2WithMain)
#
# catch_discover_tests(vector_tests
#   TEST_PREFIX "vector."
#   REPORTER XML
#   OUTPUT_DIR .
#   OUTPUT_PREFIX "vector."
#   OUTPUT_SUFFIX .xml)
